@@ -34,18 +34,8 @@ public class Controller extends UnicastRemoteObject implements RemoteController 
     private final Map<Integer, ProcessingState> processingStates;
     private final Map<Integer, ProcessingInfo> processingInfos;
     private final WorkDistributor workDistributor = new WorkDistributor();
-    private final ExecutorService executor = Executors.newFixedThreadPool(4,
-            runnable -> {
-                var thread = new Thread(runnable);
-                thread.setPriority(Thread.MAX_PRIORITY);
-                return thread;
-            });
-    private final ScheduledExecutorService healthCheckExecutor = Executors.newSingleThreadScheduledExecutor(
-            runnable -> {
-                var thread = new Thread(runnable);
-                thread.setPriority(Thread.MAX_PRIORITY);
-                return thread;
-            });
+    private final ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor();
+    private final ScheduledExecutorService healthCheckExecutor = Executors.newSingleThreadScheduledExecutor();
 
     public Controller() throws RemoteException {
         super(Integer.parseInt(SystemProperties.getRmiPort()) + 1);
